DGC-185: Fixed alignment with logo and user account menu. (#167)

--- a/docroot/themes/custom/govcon/components/organisms/header/header.scss
+++ b/docroot/themes/custom/govcon/components/organisms/header/header.scss
@@ -190,11 +190,12 @@ header {
   display: flex;
   justify-content: flex-end;
   column-gap: 50px;
-  align-items: flex-start;
-
+  align-items: center;
+  
   @include mixins.media-breakpoint-down(lg) {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
   
     > .header__top__menu {
       order: 1;
